# extraextra

./: .gitignore  README.md  pyproject.toml  template_vars.env
.github/workflows/: bandit.yml  todo2issue.yml
design_documents/experiments_n_prototypes/: Proto_attempts_4.md
design_documents/experiments_n_prototypes/BNU/: apply_update_1.py  reset-testing.sh  shared-defs.sh
design_documents/experiments_n_prototypes/BNU_1/: update.py
design_documents/experiments_n_prototypes/old_AppliedServerChanges/: README.md  pyproject.old.toml
docs/: conf.py
scripts/: project-cli  update-variables.sh
src/bpe_extraextra/: __about__.py  __init__.py  cli.py  proto1.py  proto2.py  utils.py
tests/: test_BaseRequest.py
